define blocks footer and always import inject partials

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,12 @@
     <body>
         {{- partial "preloader.html" . -}}
         {{- partial "header.html" . -}}
-        {{- block "main" . }}{{- end }}
-        {{- partial "footer.html" . -}}
+        <div class="block-main">
+            {{ block "main" . }}{{ end }}
+        </div>
+        <div class="block-footer">
+            {{ block "footer" . }}{{ partial "footer.html" . }}{{ end }}
+        </div>
+        {{ partial "injects" . }}
     </body>
 </html>
