--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
-{{ if and (.Scratch.Get "contact") (.Site.Params.contact.enable) }}
-{{ partial "contact.html" . }}
+{{ if .Site.Params.contact.enable }}
+  {{ partial "contact.html" . }}
 {{ end }}
 
 <!-- footer -->
