--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,7 +48,7 @@
 
   {{ if .Site.Data.homepage.about.enable }}
   <!-- about -->
-  <section class="section">
+  <section class="section pb-0">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 mx-auto text-center">
@@ -181,38 +181,6 @@
   {{ end }}
 
 
-  {{ if .Site.Data.homepage.portfolio.enable }}
-  <!-- portfolio -->
-  <section class="section">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 text-center">
-          <h2 class="section-title">{{ .Site.Data.homepage.portfolio.title | markdownify }}</h2>
-        </div>
-      </div>
-      <div class="row shuffle-wrapper">
-        {{ $item:= .Site.Data.homepage.portfolio.item_show }}
-        {{ range first $item .Site.Data.portfolio.item }}
-        <div class="col-lg-4 col-6 mb-4 shuffle-item">
-          <div class="position-relative rounded hover-wrapper">
-            <img src="{{.image | absURL }}" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
-            {{ if and ( ne .project_url "" ) ( ne .project_url "#" ) }}
-            <div class="hover-overlay">
-              <div class="hover-content">
-                <a class="btn btn-light btn-sm" href="{{ .project_url | safeURL }}">view project</a>
-              </div>
-            </div>
-            {{ end }}
-          </div>
-        </div>
-        {{ end }}
-      </div>
-    </div>
-  </section>
-  <!-- /portfolio -->
-  {{ end }}
-
-
   {{ if .Site.Data.homepage.testimonial.enable }}
   {{ with .Site.Data.homepage.testimonial }}
   <!-- testimonial -->
@@ -274,6 +242,38 @@
     </div>
   </section>
   <!-- /blog -->
+  {{ end }}
+
+
+  {{ if .Site.Data.homepage.portfolio.enable }}
+  <!-- portfolio -->
+  <section class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h2 class="section-title">{{ .Site.Data.homepage.portfolio.title | markdownify }}</h2>
+        </div>
+      </div>
+      <div class="row shuffle-wrapper">
+        {{ $item:= .Site.Data.homepage.portfolio.item_show }}
+        {{ range first $item .Site.Data.portfolio.item }}
+        <div class="col-lg-4 col-6 mb-4 shuffle-item">
+          <div class="position-relative rounded hover-wrapper">
+            <img src="{{.image | absURL }}" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
+            {{ if and ( ne .project_url "" ) ( ne .project_url "#" ) }}
+            <div class="hover-overlay">
+              <div class="hover-content">
+                <a class="btn btn-light btn-sm" href="{{ .project_url | safeURL }}">view project</a>
+              </div>
+            </div>
+            {{ end }}
+          </div>
+        </div>
+        {{ end }}
+      </div>
+    </div>
+  </section>
+  <!-- /portfolio -->
   {{ end }}
 
 
